# controllers/project.js
@@ -40,7 +40,7 @@ const createNewContact = async (req, res) => {
     firstName: req.body.firstName,
     lastName: req.body.lastName,
     email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
+    favoriteCompany: req.body.favoriteColor,
     birthday: req.body.birthday,
     major: req.body.major,
     graduation: req.body.graduaction,
@@ -64,7 +64,7 @@ const updateExistingContact = async (req, res) => {
     firstName: req.body.firstName,
     lastName: req.body.lastName,
     email: req.body.email,
-    favoriteColor: req.body.favoriteColor,
+    favoriteCompany: req.body.favoriteColor,
     birthday: req.body.birthday,
     major: req.body.major,
     graduation: req.body.graduaction,
