# swagger.json
@@ -5,10 +5,10 @@
     "description": "Contact API",
     "version": "1.0.0"
   },
-  "host": "cse341-amulek-new-project.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/api-docs": {
@@ -52,7 +52,7 @@
                 "email": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "favoriteCompany": {
                   "example": "any"
                 },
                 "birthday": {
